--- a/shared/components/Header/style.css
+++ b/shared/components/Header/style.css
@@ -33,6 +33,7 @@
       align-items: center;
       justify-content: center;
       margin-right: 15px;
+      color: white;
     }
 
     .profileMenu {
